Fix image and video width overflowing on smaller screens

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,9 +20,3 @@
 @import "templates/project";
 
 @import "themes/prism-theme";
-
-// Center embedded video
-.embedVideo-iframe {
-  display: block;
-  margin: 0 auto;
-}
