--- a/src/styles/templates/_post-common.scss
+++ b/src/styles/templates/_post-common.scss
@@ -49,6 +49,7 @@
     & img {
       display: block;
       margin: 0 auto;
+      max-width: 100%;
     }
 
     & a {
@@ -68,4 +69,20 @@
       }
     }
   }
+}
+
+// Center embedded video and make it responsive
+.embedVideo-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+
+.embedVideo-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
